HTML barebones. CSS added. Images added.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-<h1>Front end page</h1>
+<div class="container">
+    <link href="layout.css" rel="stylesheet" type="text/css">
+    <div class="cover">
+      <h1>Spotify Hit Predictor</h1>
+      <form  class="flex-form">
+        <label for="from">
+          <i class="ion-location"></i>
+        </label>
+        <input type="search" placeholder="Search for a song">
+        <input type="submit" value="Search">
+      </form>
+      <div id="madeby">
+        <span>
+          Created By: Amanda Chan and Luke Gebler
+        </span>
+      </div>
+    </div>
+  
+  </div>
