--- a/index.html
+++ b/index.html
@@ -1,19 +1,70 @@
-<div class="container">
-    <link href="layout.css" rel="stylesheet" type="text/css">
-    <div class="cover">
-      <h1>Spotify Hit Predictor</h1>
-      <form  class="flex-form">
-        <label for="from">
-          <i class="ion-location"></i>
-        </label>
-        <input type="search" placeholder="Search for a song">
-        <input type="submit" value="Search">
-      </form>
-      <div id="madeby">
-        <span>
-          Created By: Amanda Chan and Luke Gebler
-        </span>
+
+<body>
+  <div class="container">
+      <link href="layout.css" rel="stylesheet" type="text/css">
+      <div class="cover">
+        <h1>Spotify Hit Predictor</h1>
+        <form  class="flex-form">
+          <label for="from">
+            <i class="ion-location"></i>
+          </label>
+          <input type="search" placeholder="Search for a song" id="searchVal">
+          <input type="submit" name="Search" value="Search" onclick="saveToFirebase(document.getElementById('searchVal').value)">
+        </form>
+        <div id="madeby">
+          <span>
+            Created By: Amanda Chan and Luke Gebler
+          </span>
+        </div>
       </div>
     </div>
-  
-  </div>
+
+    <script>
+      function saveToFirebase(search) {
+        var searchObject = {
+            search: search
+        };
+
+      firebase.database().ref('song-query').push().set(searchObject)
+        .then(function(snapshot) {
+            success(); // some success method
+        }, function(error) {
+            console.log('error' + error);
+            error(); // some error method
+        });
+      }
+
+      function success() {
+
+      }
+      
+      function error() {
+        
+      }
+
+    </script>
+
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+  <script src="https://www.gstatic.com/firebasejs/7.14.3/firebase-app.js"></script>
+
+  <!-- TODO: Add SDKs for Firebase products that you want to use
+      https://firebase.google.com/docs/web/setup#available-libraries -->
+  <script src="https://www.gstatic.com/firebasejs/7.14.3/firebase-analytics.js"></script>
+
+  <script>
+    // Your web app's Firebase configuration
+    var firebaseConfig = {
+      apiKey: "AIzaSyA5Z1FcOg_OdeFsNcFWOcWZQo_yTrlzn7o",
+      authDomain: "spotify-data-science.firebaseapp.com",
+      databaseURL: "https://spotify-data-science.firebaseio.com",
+      projectId: "spotify-data-science",
+      storageBucket: "spotify-data-science.appspot.com",
+      messagingSenderId: "34593205335",
+      appId: "1:34593205335:web:6ee9ac5ed04d589fcd8712",
+      measurementId: "G-ZWJSWWP8BP"
+    };
+    // Initialize Firebase
+    firebase.initializeApp(firebaseConfig);
+    firebase.analytics();
+  </script>
+</body>
